--- a/client/style/style.css
+++ b/client/style/style.css
@@ -61,7 +61,8 @@ li {
   margin-bottom: 15px;
 }
 
-.comment-btn {
+.comment-btn,
+.btn-action {
   padding: 3px 10px;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
   border-radius: 6px;
@@ -77,7 +78,8 @@ li {
   touch-action: manipulation;
 }
 
-.comment-btn:focus {
+.comment-btn:focus,
+.btn-action:focus {
   box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),
     0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
     0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
